--- a/funky-radish/Views/Base.lproj/Main.storyboard
+++ b/funky-radish/Views/Base.lproj/Main.storyboard
@@ -97,7 +97,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" springLoaded="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Suc-ga-d4X">
-                                <rect key="frame" x="20" y="64" width="335" height="603"/>
+                                <rect key="frame" x="20" y="20" width="335" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="separatorColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -146,7 +146,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0QH-hJ-92k">
-                                <rect key="frame" x="20" y="104" width="335" height="30"/>
+                                <rect key="frame" x="20" y="60" width="335" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="yxu-MC-876"/>
                                 </constraints>
@@ -155,7 +155,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="eiR-bG-E22">
-                                <rect key="frame" x="20" y="154" width="335" height="250"/>
+                                <rect key="frame" x="20" y="110" width="335" height="250"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="250" id="JKl-PM-60O"/>
@@ -164,30 +164,34 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yME-zu-74J">
-                                <rect key="frame" x="164" y="504" width="49" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yME-zu-74J">
+                                <rect key="frame" x="163" y="536" width="51" height="31"/>
                                 <connections>
                                     <action selector="recipeToggle:" destination="tJ8-s5-WdQ" eventType="valueChanged" id="GJH-FD-A4m"/>
                                 </connections>
                             </switch>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jMW-dS-8Ey">
-                                <rect key="frame" x="269" y="55" width="34" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7lI-a8-25E">
+                                <rect key="frame" x="321" y="60" width="34" height="30"/>
+                                <accessibility key="accessibilityConfiguration" label="Save"/>
                                 <state key="normal" title="Save"/>
                                 <connections>
-                                    <segue destination="lIw-CJ-enf" kind="show" id="SSm-hz-YkB"/>
+                                    <action selector="saveRecipeButton:" destination="tJ8-s5-WdQ" eventType="touchUpInside" id="QWQ-a4-XfT"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="TFI-no-JyF" firstAttribute="bottom" secondItem="yME-zu-74J" secondAttribute="bottom" constant="100" id="416-uD-PDr"/>
+                            <constraint firstItem="TFI-no-JyF" firstAttribute="trailing" secondItem="7lI-a8-25E" secondAttribute="trailing" constant="20" id="5Yv-hB-uLr"/>
+                            <constraint firstItem="eiR-bG-E22" firstAttribute="centerX" secondItem="ucp-Uy-lnD" secondAttribute="centerX" id="9MY-v2-TxN"/>
                             <constraint firstItem="0QH-hJ-92k" firstAttribute="leading" secondItem="TFI-no-JyF" secondAttribute="leading" constant="20" id="CPc-1b-RTL"/>
+                            <constraint firstItem="0QH-hJ-92k" firstAttribute="top" secondItem="TFI-no-JyF" secondAttribute="top" constant="40" id="Huo-0p-pha"/>
                             <constraint firstItem="eiR-bG-E22" firstAttribute="top" secondItem="0QH-hJ-92k" secondAttribute="bottom" constant="20" id="YdR-8f-6Fz"/>
                             <constraint firstItem="TFI-no-JyF" firstAttribute="trailing" secondItem="eiR-bG-E22" secondAttribute="trailing" constant="20" id="aZU-vU-53i"/>
                             <constraint firstItem="eiR-bG-E22" firstAttribute="leading" secondItem="TFI-no-JyF" secondAttribute="leading" constant="20" id="c0c-NE-imP"/>
+                            <constraint firstItem="7lI-a8-25E" firstAttribute="top" secondItem="TFI-no-JyF" secondAttribute="top" constant="40" id="hWR-Ko-lDg"/>
+                            <constraint firstItem="yME-zu-74J" firstAttribute="centerX" secondItem="ucp-Uy-lnD" secondAttribute="centerX" id="rvN-Ee-Row"/>
                             <constraint firstItem="TFI-no-JyF" firstAttribute="trailing" secondItem="0QH-hJ-92k" secondAttribute="trailing" constant="20" id="vHN-Aa-IgD"/>
-                            <constraint firstItem="0QH-hJ-92k" firstAttribute="top" secondItem="TFI-no-JyF" secondAttribute="top" constant="40" id="yAz-xs-xDl"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="TFI-no-JyF"/>
                     </view>
@@ -199,7 +203,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fTi-CQ-rVr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1735" y="1890"/>
+            <point key="canvasLocation" x="1733.5999999999999" y="1889.5052473763119"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="KcY-VV-EC6">
@@ -318,7 +322,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="KIz-J1-eHB"/>
-        <segue reference="ENc-nc-dkD"/>
-        <segue reference="whS-MX-gdP"/>
+        <segue reference="UfR-CA-od2"/>
     </inferredMetricsTieBreakers>
 </document>
