--- a/funky-radish/Views/Base.lproj/Main.storyboard
+++ b/funky-radish/Views/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
                                 </constraints>
                                 <state key="normal" title="Sign up!"/>
                                 <connections>
-                                    <segue destination="FId-Vr-j8d" kind="show" id="KIz-J1-eHB"/>
+                                    <action selector="signupSegue:" destination="lIw-CJ-enf" eventType="touchUpInside" id="wVU-cK-lOq"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DAD-64-tLY">
@@ -99,11 +99,46 @@
                     <connections>
                         <outlet property="emailField" destination="DAD-64-tLY" id="nTK-yc-Tnr"/>
                         <outlet property="passwordField" destination="u4x-hv-ebc" id="p7b-Md-jcG"/>
+                        <segue destination="FId-Vr-j8d" kind="presentation" identifier="signupSegue" id="xth-nj-9W2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5nd-N9-d3K" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4038" y="2781"/>
+            <point key="canvasLocation" x="1825" y="4105"/>
+        </scene>
+        <!--Settings View Controller-->
+        <scene sceneID="AX9-rb-rCl">
+            <objects>
+                <tableViewController id="Qrs-Tc-CFr" customClass="SettingsViewController" customModule="funky_radish" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="aEw-ZZ-OUC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Tcl-Vd-anc">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Tcl-Vd-anc" id="Lso-Y4-QOw">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="lIw-CJ-enf" kind="presentation" identifier="loginFromSettingsSegue" id="QqC-ib-Dsf"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Qrs-Tc-CFr" id="1HB-rm-eZE"/>
+                            <outlet property="delegate" destination="Qrs-Tc-CFr" id="O5v-Mo-6rZ"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <outlet property="settingsList" destination="aEw-ZZ-OUC" id="d2R-3a-0FB"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MxB-5j-ORA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1167" y="3020"/>
         </scene>
         <!--Recipe Search View Controller-->
         <scene sceneID="o3R-OT-qg7">
@@ -149,11 +184,12 @@
                         <outlet property="recipeList" destination="Suc-ga-d4X" id="aDn-F0-0wl"/>
                         <segue destination="tJ8-s5-WdQ" kind="show" identifier="recipeSegue" id="tFw-3H-ysE"/>
                         <segue destination="FId-Vr-j8d" kind="presentation" identifier="signUpSegue" id="gsg-3J-eJH"/>
+                        <segue destination="lIw-CJ-enf" kind="presentation" identifier="loginSegue" id="2f1-gM-vau"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X5a-Br-FmW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="638" y="2319"/>
+            <point key="canvasLocation" x="905" y="3021"/>
         </scene>
         <!--Recipe View Controller-->
         <scene sceneID="zys-yj-BAx">
@@ -172,7 +208,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0QH-hJ-92k">
-                                <rect key="frame" x="20" y="60" width="335" height="30"/>
+                                <rect key="frame" x="20" y="55" width="335" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="yxu-MC-876"/>
                                 </constraints>
@@ -181,16 +217,16 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="eiR-bG-E22">
-                                <rect key="frame" x="20" y="110" width="335" height="250"/>
+                                <rect key="frame" x="20" y="120" width="335" height="250"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="250" id="JKl-PM-60O"/>
                                 </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" spellCheckingType="no"/>
                             </textView>
-                            <button opaque="NO" clipsSubviews="YES" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="afq-9L-AdY">
+                            <button opaque="NO" clipsSubviews="YES" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="afq-9L-AdY" userLabel="Trash">
                                 <rect key="frame" x="320" y="60" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="059-jj-nG8"/>
@@ -214,18 +250,31 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V7G-Ht-UKG" userLabel="Edit">
+                                <rect key="frame" x="25" y="90" width="15" height="15"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="15" id="upl-cq-c1t"/>
+                                    <constraint firstAttribute="width" constant="15" id="ysq-yF-OQm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="1"/>
+                                <state key="normal" image="edit"/>
+                                <connections>
+                                    <action selector="editTitle:" destination="tJ8-s5-WdQ" eventType="touchUpInside" id="4KJ-DK-u3l"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="V7G-Ht-UKG" firstAttribute="leading" secondItem="TFI-no-JyF" secondAttribute="leading" constant="25" id="5vb-vh-TD2"/>
                             <constraint firstItem="6B2-pb-DQi" firstAttribute="top" secondItem="msO-sj-qpV" secondAttribute="bottom" constant="70" id="8Ga-Az-MiT"/>
                             <constraint firstItem="eiR-bG-E22" firstAttribute="centerX" secondItem="ucp-Uy-lnD" secondAttribute="centerX" id="9MY-v2-TxN"/>
                             <constraint firstItem="afq-9L-AdY" firstAttribute="bottom" secondItem="7lI-a8-25E" secondAttribute="bottom" id="AZ4-u7-TZq"/>
                             <constraint firstItem="0QH-hJ-92k" firstAttribute="leading" secondItem="TFI-no-JyF" secondAttribute="leading" constant="20" id="CPc-1b-RTL"/>
                             <constraint firstItem="TFI-no-JyF" firstAttribute="trailing" secondItem="7lI-a8-25E" secondAttribute="trailing" constant="80" id="DaE-S6-MdJ"/>
-                            <constraint firstItem="0QH-hJ-92k" firstAttribute="top" secondItem="TFI-no-JyF" secondAttribute="top" constant="40" id="Huo-0p-pha"/>
+                            <constraint firstItem="0QH-hJ-92k" firstAttribute="top" secondItem="TFI-no-JyF" secondAttribute="top" constant="35" id="QTF-gm-TAT"/>
                             <constraint firstItem="TFI-no-JyF" firstAttribute="bottom" secondItem="6B2-pb-DQi" secondAttribute="bottom" constant="100" id="SgV-8f-F1y"/>
                             <constraint firstItem="TFI-no-JyF" firstAttribute="trailing" secondItem="afq-9L-AdY" secondAttribute="trailing" constant="25" id="SmI-hl-kdI"/>
-                            <constraint firstItem="eiR-bG-E22" firstAttribute="top" secondItem="0QH-hJ-92k" secondAttribute="bottom" constant="20" id="YdR-8f-6Fz"/>
+                            <constraint firstItem="eiR-bG-E22" firstAttribute="top" secondItem="7lI-a8-25E" secondAttribute="bottom" constant="30" id="Xza-nZ-4XC"/>
                             <constraint firstItem="TFI-no-JyF" firstAttribute="trailing" secondItem="eiR-bG-E22" secondAttribute="trailing" constant="20" id="aZU-vU-53i"/>
                             <constraint firstItem="eiR-bG-E22" firstAttribute="leading" secondItem="TFI-no-JyF" secondAttribute="leading" constant="20" id="c0c-NE-imP"/>
                             <constraint firstItem="afq-9L-AdY" firstAttribute="leading" secondItem="7lI-a8-25E" secondAttribute="trailing" constant="25" id="dHW-5B-n1S"/>
@@ -233,6 +282,7 @@
                             <constraint firstItem="7lI-a8-25E" firstAttribute="top" secondItem="TFI-no-JyF" secondAttribute="top" constant="40" id="hWR-Ko-lDg"/>
                             <constraint firstItem="msO-sj-qpV" firstAttribute="centerX" secondItem="ucp-Uy-lnD" secondAttribute="centerX" id="vH5-Ec-dNZ"/>
                             <constraint firstItem="TFI-no-JyF" firstAttribute="trailing" secondItem="0QH-hJ-92k" secondAttribute="trailing" constant="20" id="vHN-Aa-IgD"/>
+                            <constraint firstItem="V7G-Ht-UKG" firstAttribute="top" secondItem="0QH-hJ-92k" secondAttribute="bottom" constant="5" id="vX9-uL-gOB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="TFI-no-JyF"/>
                     </view>
@@ -245,7 +295,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fTi-CQ-rVr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1615" y="1494"/>
+            <point key="canvasLocation" x="1824.8" y="1889.5052473763119"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="KcY-VV-EC6">
@@ -268,7 +318,7 @@
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next" textContentType="nickname"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fJ9-MM-gUg">
                                 <rect key="frame" x="62" y="366" width="250" height="30"/>
@@ -277,7 +327,7 @@
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="next" textContentType="email"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uX1-D7-fdi">
                                 <rect key="frame" x="63" y="440" width="250" height="30"/>
@@ -286,7 +336,7 @@
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="next" secureTextEntry="YES" textContentType="password"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jw9-sO-QZ5">
                                 <rect key="frame" x="63" y="500" width="250" height="27"/>
@@ -307,7 +357,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Login"/>
                                 <connections>
-                                    <segue destination="lIw-CJ-enf" kind="show" id="whS-MX-gdP"/>
+                                    <action selector="loginSegue:" destination="FId-Vr-j8d" eventType="touchUpInside" id="0Ch-k6-Sgd"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HnA-Z5-4t1">
@@ -346,11 +396,12 @@
                         <outlet property="emailField" destination="fJ9-MM-gUg" id="X3n-pc-JGn"/>
                         <outlet property="passwordField" destination="uX1-D7-fdi" id="MhX-OX-zxP"/>
                         <outlet property="usernameField" destination="Fqw-2q-lfP" id="5Af-Q5-LSy"/>
+                        <segue destination="lIw-CJ-enf" kind="presentation" identifier="loginSegue" id="dA5-lt-9bX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Ot-bz-yJ1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2864.8000000000002" y="2780.9595202398805"/>
+            <point key="canvasLocation" x="3065" y="3216"/>
         </scene>
         <!--Custom Navigation Controller-->
         <scene sceneID="xBs-PG-aor">
@@ -365,6 +416,7 @@
                     <connections>
                         <segue destination="e6D-pJ-vfE" kind="relationship" relationship="rootViewController" id="ENc-nc-dkD"/>
                         <segue destination="tJ8-s5-WdQ" kind="show" identifier="createRecipeSegue" id="o9C-o4-2Gp"/>
+                        <segue destination="Qrs-Tc-CFr" kind="show" identifier="settingsSegue" id="OOo-EH-SBy"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tsA-x5-QD3" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -374,12 +426,14 @@
     </scenes>
     <resources>
         <image name="close" width="50" height="50"/>
+        <image name="edit" width="50" height="50"/>
         <image name="radish" width="512" height="512"/>
         <image name="trash" width="128" height="128"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="KIz-J1-eHB"/>
-        <segue reference="o9C-o4-2Gp"/>
+        <segue reference="xth-nj-9W2"/>
+        <segue reference="tFw-3H-ysE"/>
         <segue reference="UfR-CA-od2"/>
+        <segue reference="dA5-lt-9bX"/>
     </inferredMetricsTieBreakers>
 </document>
