--- a/funky-radish/Views/Base.lproj/Main.storyboard
+++ b/funky-radish/Views/Base.lproj/Main.storyboard
@@ -189,10 +189,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0QH-hJ-92k">
-                                <rect key="frame" x="15" y="55" width="200" height="30"/>
+                                <rect key="frame" x="15" y="55" width="42.5" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="70" id="dHk-Ht-PQX"/>
-                                    <constraint firstAttribute="width" constant="200" id="m1K-hI-npL">
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="m1K-hI-npL">
                                         <variation key="heightClass=regular-widthClass=regular" constant="800"/>
                                     </constraint>
                                 </constraints>
@@ -342,7 +342,7 @@
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uX1-D7-fdi">
                                 <rect key="frame" x="62.5" y="300" width="250" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="250" id="nIJ-aQ-eMR"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="nIJ-aQ-eMR"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
